--- a/src/main/resources/view/dealership_software/listGUI.fxml
+++ b/src/main/resources/view/dealership_software/listGUI.fxml
@@ -15,6 +15,7 @@
       </Label>
       <Button layoutX="133.0" layoutY="349.0" mnemonicParsing="false" onAction="#switchToEditScene" text="Click here to edit" />
       <Button layoutX="369.0" layoutY="349.0" mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="94.0" text="RefreshList" />
-      <ListView fx:id="carList" layoutX="67.0" layoutY="92.0" prefHeight="200.0" prefWidth="478.0" />
+      <ListView fx:id="carList" layoutX="62.0" layoutY="91.0" prefHeight="200.0" prefWidth="478.0" />
+      <Button layoutX="62.0" layoutY="318.0" mnemonicParsing="false" text="Button" />
    </children>
 </AnchorPane>
