--- a/src/main/resources/view/dealership_software/listGUI.fxml
+++ b/src/main/resources/view/dealership_software/listGUI.fxml
@@ -3,19 +3,37 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
+<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
    <children>
-      <Label fx:id="showDealerLabel" alignment="CENTER" layoutX="16.0" layoutY="40.0" prefHeight="25.0" prefWidth="570.0" text="Select vehicle to show dealer">
+      <Label fx:id="showDealerLabel" alignment="CENTER" layoutX="179.0" layoutY="38.0" prefHeight="27.0" prefWidth="269.0" text="Inventory">
          <font>
-            <Font size="18.0" />
+            <Font name="Serif Regular" size="28.0" />
          </font>
       </Label>
-      <Button layoutX="133.0" layoutY="349.0" mnemonicParsing="false" onAction="#switchToEditScene" text="Click here to edit" />
-      <Button layoutX="369.0" layoutY="349.0" mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="94.0" text="RefreshList" />
-      <ListView fx:id="carList" layoutX="62.0" layoutY="91.0" prefHeight="200.0" prefWidth="478.0" />
-      <Button layoutX="62.0" layoutY="318.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="103.0" layoutY="481.0" mnemonicParsing="false" onAction="#switchToEditScene" text="Click here to add import JSON" />
+      <Button layoutX="401.0" layoutY="481.0" mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="106.0" text="RefreshList" />
+      <ListView fx:id="carList" layoutX="37.0" layoutY="102.0" prefHeight="335.0" prefWidth="552.0" />
+      <Button layoutX="712.0" layoutY="270.0" mnemonicParsing="false" text="Save to Inventory" />
+      <TextField fx:id="addCarDID" layoutX="692.0" layoutY="102.0" />
+      <Label layoutX="623.0" layoutY="106.0" text="Dealer ID : " />
+      <Label layoutX="638.0" layoutY="130.0" text="Car ID :" />
+      <TextField fx:id="adCarID" layoutX="692.0" layoutY="126.0" />
+      <TextField fx:id="addCarPrice" layoutX="692.0" layoutY="151.0" />
+      <TextField fx:id="addCarType" layoutX="692.0" layoutY="177.0" />
+      <TextField fx:id="addCarMake" layoutX="692.0" layoutY="202.0" />
+      <TextField fx:id="addCarModel" layoutX="692.0" layoutY="227.0" />
+      <Label layoutX="642.0" layoutY="155.0" text="Price :" />
+      <Label layoutX="643.0" layoutY="181.0" text="type :" />
+      <Label layoutX="640.0" layoutY="206.0" text="Make :" />
+      <Label layoutX="638.0" layoutY="231.0" text="Model :" />
+      <Label layoutX="724.0" layoutY="69.0" text="Add Vehicle">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
