--- a/src/main/resources/view/dealership_software/editGUI.fxml
+++ b/src/main/resources/view/dealership_software/editGUI.fxml
@@ -1,10 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="261.0" prefWidth="420.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
-    <children>
-        <Button layoutX="178.0" layoutY="182.0" mnemonicParsing="false" onAction="#switchToMainScene" text="3rd page, nos use at this time" />
-    </children>
+<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
+   <children>
+      <Label layoutX="400.0" layoutY="29.0" text="Dealer">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Button layoutX="127.0" layoutY="317.0" mnemonicParsing="false" text="Set dealer to OFF" />
+      <Button layoutX="703.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToMainMenu" text="Return to main menu" />
+      <TextField layoutX="105.0" layoutY="193.0" />
+      <Label layoutX="15.0" layoutY="197.0" text="Enter dealer ID :" />
+      <Button layoutX="128.0" layoutY="279.0" mnemonicParsing="false" text="Set dealer to ON" />
+      <ListView layoutX="317.0" layoutY="109.0" prefHeight="339.0" prefWidth="522.0" />
+      <Button layoutX="93.0" layoutY="238.0" mnemonicParsing="false" text="Show Inventory for this dealer" />
+      <Label layoutX="406.0" layoutY="123.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button layoutX="103.0" layoutY="358.0" mnemonicParsing="false" onAction="#switchToMainScene" text="Export this dealer to JSON" />
+      <Button layoutX="413.0" layoutY="490.0" mnemonicParsing="false" text="Save &amp; Exit" />
+      <Button layoutX="120.0" layoutY="465.0" mnemonicParsing="false" text="Show all Dealers" />
+   </children>
 </AnchorPane>
