--- a/src/main/resources/view/dealership_software/listGUI.fxml
+++ b/src/main/resources/view/dealership_software/listGUI.fxml
@@ -9,15 +9,15 @@
 
 <AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
    <children>
-      <Label fx:id="showDealerLabel" alignment="CENTER" layoutX="179.0" layoutY="38.0" prefHeight="27.0" prefWidth="269.0" text="Inventory">
+      <Label fx:id="showDealerLabel" alignment="CENTER" layoutX="154.0" layoutY="38.0" prefHeight="31.0" prefWidth="320.0" text="Company Inventory">
          <font>
             <Font name="Serif Regular" size="28.0" />
          </font>
       </Label>
-      <Button layoutX="103.0" layoutY="481.0" mnemonicParsing="false" onAction="#switchToEditScene" text="Click here to add import JSON" />
-      <Button layoutX="401.0" layoutY="481.0" mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="106.0" text="RefreshList" />
-      <ListView fx:id="carList" layoutX="37.0" layoutY="102.0" prefHeight="335.0" prefWidth="552.0" />
-      <Button fx:id="addCarButton" layoutX="712.0" layoutY="270.0" mnemonicParsing="false" onAction="#addCar" text="Save to Inventory" />
+      <Button layoutX="100.0" layoutY="446.0" mnemonicParsing="false" onAction="#switchToEditScene" prefHeight="25.0" prefWidth="109.0" text="Import JSON" />
+      <Button layoutX="421.0" layoutY="446.0" mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="106.0" text="RefreshList" />
+      <ListView fx:id="carList" layoutX="38.0" layoutY="92.0" prefHeight="313.0" prefWidth="552.0" />
+      <Button fx:id="addCar" layoutX="712.0" layoutY="270.0" mnemonicParsing="false" onAction="#addCar" text="Save to Inventory" />
       <TextField fx:id="addCarDID" layoutX="692.0" layoutY="102.0" />
       <Label layoutX="623.0" layoutY="106.0" text="Dealer ID : " />
       <Label layoutX="638.0" layoutY="130.0" text="Car ID :" />
@@ -35,5 +35,8 @@
             <Font size="16.0" />
          </font>
       </Label>
+      <Button layoutX="260.0" layoutY="446.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="import XML" />
+      <Button layoutX="39.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToListGUI" text="Switch to dealer tab" />
+      <Button layoutX="729.0" layoutY="446.0" mnemonicParsing="false" text="Save &amp; Exit" />
    </children>
 </AnchorPane>
