--- a/src/main/resources/view/dealership_software/mainGUI.fxml
+++ b/src/main/resources/view/dealership_software/mainGUI.fxml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="163.0" prefWidth="262.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
+<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
     <children>
-        <Button layoutX="89.0" layoutY="46.0" mnemonicParsing="false" onAction="#switchToEditScene" prefHeight="25.0" prefWidth="85.0" text="Load " />
-        <Button layoutX="104.0" layoutY="98.0" mnemonicParsing="false" onAction="#exitProgram" prefHeight="25.0" prefWidth="55.0" text="Exit" />
+        <Button layoutX="409.0" layoutY="468.0" mnemonicParsing="false" onAction="#exitProgram" prefHeight="25.0" prefWidth="85.0" text="Save &amp; Exit" />
+      <Label layoutX="343.0" layoutY="41.0" text="Create Dealer">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <TextField layoutX="378.0" layoutY="171.0" />
+      <Label layoutX="288.0" layoutY="175.0" text="New Dealer ID:" />
+      <Button layoutX="397.0" layoutY="205.0" mnemonicParsing="false" text="Create this dealer" />
+      <Button layoutX="671.0" layoutY="28.0" mnemonicParsing="false" onAction="#switchToListGUI" text="Return to Dealer menu" />
+      <Button layoutX="75.0" layoutY="28.0" mnemonicParsing="false" onAction="#switchToMainMenu" text="Return to Main Menu" />
     </children>
 </AnchorPane>
