--- a/src/main/resources/view/dealership_software/listGUI.fxml
+++ b/src/main/resources/view/dealership_software/listGUI.fxml
@@ -14,11 +14,11 @@
             <Font name="Serif Regular" size="28.0" />
          </font>
       </Label>
-      <Button layoutX="100.0" layoutY="446.0" mnemonicParsing="false" onAction="#switchToEditScene" prefHeight="25.0" prefWidth="109.0" text="Import JSON" />
+      <Button layoutX="100.0" layoutY="446.0" mnemonicParsing="false" onAction="#switchToEditScene" prefHeight="25.0" prefWidth="109.0" text="import JSON" />
       <Button layoutX="421.0" layoutY="446.0" mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="106.0" text="RefreshList" />
       <ListView fx:id="carList" layoutX="38.0" layoutY="92.0" prefHeight="313.0" prefWidth="552.0" />
       <Button fx:id="addCar" layoutX="712.0" layoutY="270.0" mnemonicParsing="false" onAction="#addCar" text="Save to Inventory" />
-      <TextField fx:id="addCarDID" layoutX="692.0" layoutY="102.0" />
+      <TextField fx:id="addCarDID" layoutX="693.0" layoutY="102.0" />
       <Label layoutX="623.0" layoutY="106.0" text="Dealer ID : " />
       <Label layoutX="638.0" layoutY="130.0" text="Car ID :" />
       <TextField fx:id="addCarID" layoutX="692.0" layoutY="126.0" />
@@ -38,5 +38,6 @@
       <Button layoutX="260.0" layoutY="446.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="import XML" />
       <Button layoutX="39.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToListGUI" text="Switch to dealer tab" />
       <Button layoutX="729.0" layoutY="446.0" mnemonicParsing="false" text="Save &amp; Exit" />
+      <Button layoutX="677.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToMainPage2" text="Switch to transfer and loan tab" />
    </children>
 </AnchorPane>
