--- a/src/main/resources/view/dealership_software/listGUI.fxml
+++ b/src/main/resources/view/dealership_software/listGUI.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
+<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
    <children>
       <Label fx:id="showDealerLabel" alignment="CENTER" layoutX="154.0" layoutY="38.0" prefHeight="31.0" prefWidth="320.0" text="Company Inventory">
          <font>
@@ -37,7 +37,8 @@
       </Label>
       <Button layoutX="260.0" layoutY="446.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="import XML" />
       <Button layoutX="39.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToListGUI" text="Switch to dealer tab" />
-      <Button layoutX="729.0" layoutY="446.0" mnemonicParsing="false" text="Save &amp; Exit" />
-      <Button layoutX="677.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToMainPage2" text="Switch to transfer and loan tab" />
+      <Button layoutX="729.0" layoutY="446.0" mnemonicParsing="false" onAction="#exitProgram" text="Save &amp; Exit" />
+      <Button layoutX="744.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToMainPage2" text="Switch to transfer tab" />
+      <Button layoutX="602.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToLoanGUI" text="Switch to loan tab" />
    </children>
 </AnchorPane>
