--- a/src/main/resources/view/dealership_software/transferGUI.fxml
+++ b/src/main/resources/view/dealership_software/transferGUI.fxml
@@ -5,22 +5,17 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
+<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
    <children>
-      <TextField layoutX="141.0" layoutY="148.0" />
-      <TextField layoutX="141.0" layoutY="197.0" />
-      <TextField layoutX="141.0" layoutY="250.0" />
-      <Label layoutX="100.0" layoutY="152.0" text="From :" />
-      <Label layoutX="97.0" layoutY="201.0" text="Car ID :" />
-      <Label layoutX="111.0" layoutY="254.0" text="To :" />
-      <Label layoutX="164.0" layoutY="107.0" text="TRANSFER VEHICLE" />
+      <TextField layoutX="376.0" layoutY="148.0" />
+      <TextField layoutX="376.0" layoutY="206.0" />
+      <TextField layoutX="376.0" layoutY="259.0" />
+      <Label layoutX="332.0" layoutY="152.0" text="From :" />
+      <Label layoutX="329.0" layoutY="210.0" text="Car ID :" />
+      <Label layoutX="349.0" layoutY="263.0" text="To :" />
+      <Label layoutX="399.0" layoutY="105.0" text="TRANSFER VEHICLE" />
       <Button layoutX="696.0" layoutY="27.0" mnemonicParsing="false" onAction="#switchToMainMenu" text="Return to main screen" />
-      <TextField layoutX="565.0" layoutY="148.0" />
-      <Button layoutX="576.0" layoutY="197.0" mnemonicParsing="false" text="Set car as loaned out" />
-      <Button layoutX="559.0" layoutY="242.0" mnemonicParsing="false" text="Set car as no longer loaned" />
-      <Label layoutX="592.0" layoutY="107.0" text="Set cars as loaned" />
-      <Button layoutX="425.0" layoutY="438.0" mnemonicParsing="false" text="Save &amp; Exit" />
-      <Label layoutX="518.0" layoutY="152.0" text="Car id :" />
-      <Button layoutX="190.0" layoutY="302.0" mnemonicParsing="false" text="Transfer" />
+      <Button layoutX="413.0" layoutY="438.0" mnemonicParsing="false" onAction="#exitProgram" text="Save &amp; Exit" />
+      <Button layoutX="421.0" layoutY="326.0" mnemonicParsing="false" text="Transfer" />
    </children>
 </AnchorPane>
