--- a/src/main/resources/view/dealership_software/transferGUI.fxml
+++ b/src/main/resources/view/dealership_software/transferGUI.fxml
@@ -7,15 +7,19 @@
 
 <AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
    <children>
-      <TextField layoutX="376.0" layoutY="148.0" />
-      <TextField layoutX="376.0" layoutY="206.0" />
-      <TextField layoutX="376.0" layoutY="259.0" />
+      <TextField fx:id="transfer_From_DealerID" layoutX="376.0" layoutY="148.0" />
+      <TextField fx:id="transfer_CarID" layoutX="376.0" layoutY="206.0" />
+      <TextField fx:id="transfer_To_DealerID" layoutX="376.0" layoutY="259.0" />
       <Label layoutX="332.0" layoutY="152.0" text="From :" />
       <Label layoutX="329.0" layoutY="210.0" text="Car ID :" />
       <Label layoutX="349.0" layoutY="263.0" text="To :" />
       <Label layoutX="399.0" layoutY="105.0" text="TRANSFER VEHICLE" />
       <Button layoutX="696.0" layoutY="27.0" mnemonicParsing="false" onAction="#switchToMainMenu" text="Return to main screen" />
       <Button layoutX="413.0" layoutY="438.0" mnemonicParsing="false" onAction="#exitProgram" text="Save &amp; Exit" />
-      <Button layoutX="421.0" layoutY="326.0" mnemonicParsing="false" text="Transfer" />
+      <Button fx:id="transfer" layoutX="421.0" layoutY="326.0" mnemonicParsing="false" onAction="#transferCar" text="Transfer" />
+      <Label fx:id="transfer_From_InvalidDealerID" layoutX="536.0" layoutY="152.0" text="Invalid dealer id" textFill="RED" visible="false" />
+      <Label fx:id="transfer_To_InvalidDealerID" layoutX="536.0" layoutY="266.0" text="Invalid dealer id" textFill="RED" visible="false" />
+      <Label fx:id="transfer_InvalidCarID" layoutX="536.0" layoutY="210.0" text="Invalid car id" textFill="RED" visible="false" />
+      <Label fx:id="transfer_Success" layoutX="430.0" layoutY="371.0" text="Success" textFill="GREEN" visible="false" />
    </children>
 </AnchorPane>
