--- a/src/main/resources/view/dealership_software/mainMenuGUI.fxml
+++ b/src/main/resources/view/dealership_software/mainMenuGUI.fxml
@@ -14,7 +14,7 @@
             <Font name="Serif Regular" size="28.0" />
          </font>
       </Label>
-      <Button layoutX="100.0" layoutY="446.0" mnemonicParsing="false" onAction="#switchToEditScene" prefHeight="25.0" prefWidth="109.0" text="import JSON" />
+      <Button layoutX="100.0" layoutY="446.0" mnemonicParsing="false" onAction="#switchToMainMenuGUI" prefHeight="25.0" prefWidth="109.0" text="import JSON" />
       <Button layoutX="421.0" layoutY="446.0" mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="106.0" text="RefreshList" />
       <ListView fx:id="carList" layoutX="38.0" layoutY="92.0" prefHeight="313.0" prefWidth="552.0" />
       <Button fx:id="addCar" layoutX="712.0" layoutY="270.0" mnemonicParsing="false" onAction="#addCar" text="Save to Inventory" />
@@ -36,7 +36,7 @@
          </font>
       </Label>
       <Button layoutX="260.0" layoutY="446.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="import XML" />
-      <Button layoutX="39.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToListGUI" text="Switch to dealer tab" />
+      <Button layoutX="39.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToDealerGUI" text="Switch to dealer tab" />
       <Button layoutX="729.0" layoutY="446.0" mnemonicParsing="false" onAction="#exitProgram" text="Save &amp; Exit" />
       <Button layoutX="744.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToTransferPage" text="Switch to transfer tab" />
       <Button layoutX="602.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToLoanGUI" text="Switch to loan tab" />
