wrote a new way to create the root in GUIController. The new way allows for the GUIController to be put in the Controller package Commented out old way of making root Moved GUIController to Controller package

--- a/src/main/resources/view/dealership_software/DealerGUI.fxml
+++ b/src/main/resources/view/dealership_software/DealerGUI.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
+<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.GUIController">
    <children>
       <Label layoutX="400.0" layoutY="29.0" text="Dealer">
          <font>
@@ -15,7 +15,7 @@
          </font>
       </Label>
       <Button layoutX="127.0" layoutY="317.0" mnemonicParsing="false" text="Set dealer to OFF" />
-      <Button layoutX="703.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToMainMenu" text="Return to main menu" />
+      <Button layoutX="703.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToMainMenuGUI" text="Return to main menu" />
       <TextField layoutX="105.0" layoutY="193.0" />
       <Label layoutX="15.0" layoutY="197.0" text="Enter dealer ID :" />
       <Button layoutX="128.0" layoutY="279.0" mnemonicParsing="false" text="Set dealer to ON" />
