--- a/src/main/resources/view/dealership_software/mainMenuGUI.fxml
+++ b/src/main/resources/view/dealership_software/mainMenuGUI.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
+<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.GUIController">
    <children>
       <Label fx:id="showDealerLabel" alignment="CENTER" layoutX="154.0" layoutY="38.0" prefHeight="31.0" prefWidth="320.0" text="Company Inventory">
          <font>
             <Font name="Serif Regular" size="28.0" />
          </font>
       </Label>
-      <Button layoutX="100.0" layoutY="446.0" mnemonicParsing="false" onAction="#switchToMainMenuGUI" prefHeight="25.0" prefWidth="109.0" text="import JSON" />
+      <Button layoutX="100.0" layoutY="446.0" mnemonicParsing="false" onAction="#readJson" prefHeight="25.0" prefWidth="109.0" text="import JSON" />
       <Button layoutX="421.0" layoutY="446.0" mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="106.0" text="RefreshList" />
       <ListView fx:id="carList" layoutX="38.0" layoutY="92.0" prefHeight="313.0" prefWidth="552.0" />
       <Button fx:id="addCar" layoutX="712.0" layoutY="270.0" mnemonicParsing="false" onAction="#addCar" text="Save to Inventory" />
@@ -38,7 +38,7 @@
       <Button layoutX="260.0" layoutY="446.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="import XML" />
       <Button layoutX="39.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToDealerGUI" text="Switch to dealer tab" />
       <Button layoutX="729.0" layoutY="446.0" mnemonicParsing="false" onAction="#exitProgram" text="Save &amp; Exit" />
-      <Button layoutX="744.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToTransferPage" text="Switch to transfer tab" />
+      <Button layoutX="744.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToTransferGUI" text="Switch to transfer tab" />
       <Button layoutX="602.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToLoanGUI" text="Switch to loan tab" />
    </children>
 </AnchorPane>
