--- a/src/main/resources/view/dealership_software/transferGUI.fxml
+++ b/src/main/resources/view/dealership_software/transferGUI.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.dealership_software.GUIController">
+<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.GUIController">
    <children>
       <TextField fx:id="transfer_From_DealerID" layoutX="376.0" layoutY="148.0" />
       <TextField fx:id="transfer_CarID" layoutX="376.0" layoutY="206.0" />
@@ -14,7 +14,7 @@
       <Label layoutX="329.0" layoutY="210.0" text="Car ID :" />
       <Label layoutX="349.0" layoutY="263.0" text="To :" />
       <Label layoutX="399.0" layoutY="105.0" text="TRANSFER VEHICLE" />
-      <Button layoutX="696.0" layoutY="27.0" mnemonicParsing="false" onAction="#switchToMainMenu" text="Return to main screen" />
+      <Button layoutX="696.0" layoutY="27.0" mnemonicParsing="false" onAction="#switchToMainMenuGUI" text="Return to main screen" />
       <Button layoutX="413.0" layoutY="438.0" mnemonicParsing="false" onAction="#exitProgram" text="Save &amp; Exit" />
       <Button fx:id="transfer" layoutX="421.0" layoutY="326.0" mnemonicParsing="false" onAction="#transferCar" text="Transfer" />
       <Label fx:id="transfer_From_InvalidDealerID" layoutX="536.0" layoutY="152.0" text="Invalid dealer id" textFill="RED" visible="false" />
