--- a/src/main/resources/view/dealership_software/loanCarGUI.fxml
+++ b/src/main/resources/view/dealership_software/loanCarGUI.fxml
@@ -6,12 +6,15 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.GUIController">   <children>
+<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.GUIControllers.loanCarGUIController">
+      <children>
       <Label layoutX="406.0" layoutY="96.0" text="Set car as loaned" AnchorPane.leftAnchor="406.0" AnchorPane.rightAnchor="405.6" />
-      <TextField layoutX="376.0" layoutY="164.0" />
+      <TextField fx:id="carIDTextField" layoutX="376.0" layoutY="164.0" />
       <Label layoutX="335.0" layoutY="168.0" text="Car id:" />
-      <RadioButton layoutX="421.0" layoutY="223.0" mnemonicParsing="false" text="Loaned" />
+      <RadioButton fx:id="loanRadioButton" layoutX="421.0" layoutY="223.0" mnemonicParsing="false" onAction="#setLoanedStatus" text="Loaned" visible="false" />
       <Button layoutX="729.0" layoutY="40.0" mnemonicParsing="false" onAction="#switchToMainMenuGUI" text="Return to main screen" />
       <Button layoutX="413.0" layoutY="312.0" mnemonicParsing="false" onAction="#exitProgram" text="Save &amp; Exit" />
+      <Label fx:id="invalidCarID" layoutX="416.0" layoutY="133.0" text="Invalid Car id" textFill="RED" visible="false" />
+      <Button layoutX="540.0" layoutY="164.0" mnemonicParsing="false" onAction="#search" text="Search" />
    </children>
 </AnchorPane>
