--- a/src/main/resources/view/dealership_software/createDealerGUI.fxml
+++ b/src/main/resources/view/dealership_software/createDealerGUI.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.GUIController">
+<AnchorPane prefHeight="549.0" prefWidth="902.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.GUIControllers.createDealerGUIController">
     <children>
         <Button layoutX="409.0" layoutY="468.0" mnemonicParsing="false" onAction="#exitProgram" prefHeight="25.0" prefWidth="85.0" text="Save &amp; Exit" />
       <Label layoutX="343.0" layoutY="41.0" text="Create Dealer">
