--- a/src/main/resources/view/dealership_software/mainMenuGUI.fxml
+++ b/src/main/resources/view/dealership_software/mainMenuGUI.fxml
@@ -14,31 +14,34 @@
             <Font name="Serif Regular" size="28.0" />
          </font>
       </Label>
-      <Button layoutX="100.0" layoutY="446.0" mnemonicParsing="false" onAction="#readJson" prefHeight="25.0" prefWidth="109.0" text="import JSON" />
-      <Button layoutX="421.0" layoutY="446.0" mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="106.0" text="RefreshList" />
-      <ListView fx:id="carList" layoutX="38.0" layoutY="92.0" prefHeight="313.0" prefWidth="552.0" />
-      <Button fx:id="addCar" layoutX="712.0" layoutY="270.0" mnemonicParsing="false" onAction="#addCar" text="Save to Inventory" />
-      <TextField fx:id="addCarDID" layoutX="693.0" layoutY="102.0" />
-      <Label layoutX="623.0" layoutY="106.0" text="Dealer ID : " />
-      <Label layoutX="638.0" layoutY="130.0" text="Car ID :" />
-      <TextField fx:id="addCarID" layoutX="692.0" layoutY="126.0" />
-      <TextField fx:id="addCarPrice" layoutX="692.0" layoutY="151.0" />
-      <TextField fx:id="addCarType" layoutX="692.0" layoutY="177.0" />
-      <TextField fx:id="addCarMake" layoutX="692.0" layoutY="202.0" />
-      <TextField fx:id="addCarModel" layoutX="692.0" layoutY="227.0" />
-      <Label layoutX="642.0" layoutY="155.0" text="Price :" />
-      <Label layoutX="643.0" layoutY="181.0" text="type :" />
-      <Label layoutX="640.0" layoutY="206.0" text="Make :" />
-      <Label layoutX="638.0" layoutY="231.0" text="Model :" />
-      <Label layoutX="724.0" layoutY="69.0" text="Add Vehicle">
+      <Button layoutX="106.0" layoutY="446.0" mnemonicParsing="false" onAction="#readJson" prefHeight="25.0" prefWidth="109.0" text="Import File" />
+      <Button layoutX="314.0" layoutY="446.0" mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="106.0" text="RefreshList" />
+      <ListView fx:id="carList" layoutX="21.0" layoutY="92.0" prefHeight="313.0" prefWidth="552.0" />
+      <Button fx:id="addCar" layoutX="658.0" layoutY="268.0" mnemonicParsing="false" onAction="#addCar" text="Save to Inventory" />
+      <TextField fx:id="addCarDID" layoutX="638.0" layoutY="102.0" />
+      <Label layoutX="579.0" layoutY="106.0" text="Dealer ID : " />
+      <Label layoutX="589.0" layoutY="130.0" text="Car ID :" />
+      <TextField fx:id="addCarID" layoutX="638.0" layoutY="126.0" />
+      <TextField fx:id="addCarPrice" layoutX="638.0" layoutY="151.0" />
+      <TextField fx:id="addCarType" layoutX="638.0" layoutY="177.0" />
+      <TextField fx:id="addCarMake" layoutX="638.0" layoutY="202.0" />
+      <TextField fx:id="addCarModel" layoutX="638.0" layoutY="227.0" />
+      <Label layoutX="593.0" layoutY="155.0" text="Price :" />
+      <Label layoutX="594.0" layoutY="181.0" text="type :" />
+      <Label layoutX="591.0" layoutY="206.0" text="Make :" />
+      <Label layoutX="589.0" layoutY="231.0" text="Model :" />
+      <Label layoutX="665.0" layoutY="69.0" text="Add Vehicle">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <Button layoutX="260.0" layoutY="446.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="import XML" />
       <Button layoutX="39.0" layoutY="29.0" mnemonicParsing="false" onAction="#switchToDealerGUI" text="Switch to dealer tab" />
       <Button layoutX="729.0" layoutY="446.0" mnemonicParsing="false" onAction="#exitProgram" text="Save &amp; Exit" />
       <Button layoutX="744.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToTransferGUI" text="Switch to transfer tab" />
       <Button layoutX="602.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToLoanGUI" text="Switch to loan tab" />
+      <Label fx:id="invalid_DealerID" layoutX="793.0" layoutY="109.0" text="Invalid" textFill="RED" visible="false" />
+      <Label fx:id="invalid_CarID" layoutX="793.0" layoutY="133.0" text="ID Aldready Exists" textFill="RED" visible="false" />
+      <Label fx:id="invalid_Type" layoutX="793.0" layoutY="184.0" text="Invalid" textFill="RED" visible="false" />
+      <Label fx:id="success" layoutX="693.0" layoutY="301.0" text="Success" textFill="GREEN" visible="false" />
    </children>
 </AnchorPane>
