--- a/src/main/resources/view/dealership_software/mainMenuGUI.fxml
+++ b/src/main/resources/view/dealership_software/mainMenuGUI.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -23,7 +24,7 @@
       <Label layoutX="589.0" layoutY="130.0" text="Car ID :" />
       <TextField fx:id="addCarID" layoutX="638.0" layoutY="126.0" />
       <TextField fx:id="addCarPrice" layoutX="638.0" layoutY="151.0" />
-      <TextField fx:id="addCarType" layoutX="638.0" layoutY="177.0" />
+      <TextField fx:id="addCarType" layoutX="590.0" layoutY="393.0" />
       <TextField fx:id="addCarMake" layoutX="638.0" layoutY="202.0" />
       <TextField fx:id="addCarModel" layoutX="638.0" layoutY="227.0" />
       <Label layoutX="593.0" layoutY="155.0" text="Price :" />
@@ -40,8 +41,9 @@
       <Button layoutX="744.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToTransferGUI" text="Switch to transfer tab" />
       <Button layoutX="602.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToLoanGUI" text="Switch to loan tab" />
       <Label fx:id="invalid_DealerID" layoutX="793.0" layoutY="109.0" text="Invalid" textFill="RED" visible="false" />
-      <Label fx:id="invalid_CarID" layoutX="793.0" layoutY="133.0" text="ID Aldready Exists" textFill="RED" visible="false" />
       <Label fx:id="invalid_Type" layoutX="793.0" layoutY="184.0" text="Invalid" textFill="RED" visible="false" />
+      <Label fx:id="invalid_CarID" layoutX="793.0" layoutY="133.0" text="ID Aldready Exists" textFill="RED" visible="false" />
       <Label fx:id="success" layoutX="693.0" layoutY="301.0" text="Success" textFill="GREEN" visible="false" />
+      <ChoiceBox fx:id="addCarTypeChoiceBox" layoutX="638.0" layoutY="177.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
