--- a/src/main/resources/view/dealership_software/mainMenuGUI.fxml
+++ b/src/main/resources/view/dealership_software/mainMenuGUI.fxml
@@ -24,7 +24,6 @@
       <Label layoutX="589.0" layoutY="130.0" text="Car ID :" />
       <TextField fx:id="addCarID" layoutX="638.0" layoutY="126.0" />
       <TextField fx:id="addCarPrice" layoutX="638.0" layoutY="151.0" />
-      <TextField fx:id="addCarType" layoutX="590.0" layoutY="393.0" />
       <TextField fx:id="addCarMake" layoutX="638.0" layoutY="202.0" />
       <TextField fx:id="addCarModel" layoutX="638.0" layoutY="227.0" />
       <Label layoutX="593.0" layoutY="155.0" text="Price :" />
@@ -45,5 +44,6 @@
       <Label fx:id="invalid_CarID" layoutX="793.0" layoutY="133.0" text="ID Aldready Exists" textFill="RED" visible="false" />
       <Label fx:id="success" layoutX="693.0" layoutY="301.0" text="Success" textFill="GREEN" visible="false" />
       <ChoiceBox fx:id="addCarTypeChoiceBox" layoutX="638.0" layoutY="177.0" prefWidth="150.0" />
+      <Button fx:id="resetButton" layoutX="573.0" layoutY="445.0" mnemonicParsing="false" onAction="#resetTextBoxAndErrors" prefHeight="26.0" prefWidth="130.0" text="Reset Errors/TextBox" />
    </children>
 </AnchorPane>
