--- a/src/main/resources/view/dealership_software/loanCarGUI.fxml
+++ b/src/main/resources/view/dealership_software/loanCarGUI.fxml
@@ -11,10 +11,10 @@
       <Label layoutX="406.0" layoutY="96.0" text="Set car as loaned" AnchorPane.leftAnchor="406.0" AnchorPane.rightAnchor="405.6" />
       <TextField fx:id="carIDTextField" layoutX="376.0" layoutY="164.0" />
       <Label layoutX="335.0" layoutY="168.0" text="Car id:" />
-      <RadioButton fx:id="loanRadioButton" layoutX="421.0" layoutY="223.0" mnemonicParsing="false" onAction="#setLoanedStatus" text="Loaned" visible="false" />
+      <RadioButton fx:id="loanRadioButton" layoutX="421.0" layoutY="223.0" mnemonicParsing="false" onAction="#setLoanStatus" text="Loaned" visible="false" />
       <Button layoutX="729.0" layoutY="40.0" mnemonicParsing="false" onAction="#switchToMainMenuGUI" text="Return to main screen" />
       <Button layoutX="413.0" layoutY="312.0" mnemonicParsing="false" onAction="#exitProgram" text="Save &amp; Exit" />
       <Label fx:id="invalidCarID" layoutX="416.0" layoutY="133.0" text="Invalid Car id" textFill="RED" visible="false" />
-      <Button layoutX="540.0" layoutY="164.0" mnemonicParsing="false" onAction="#search" text="Search" />
+      <Button layoutX="540.0" layoutY="164.0" mnemonicParsing="false" onAction="#loanSearch" text="Search" />
    </children>
 </AnchorPane>
