--- a/src/main/resources/view/dealership_software/mainMenuGUI.fxml
+++ b/src/main/resources/view/dealership_software/mainMenuGUI.fxml
@@ -16,7 +16,7 @@
          </font>
       </Label>
       <Button layoutX="106.0" layoutY="446.0" mnemonicParsing="false" onAction="#readJson" prefHeight="25.0" prefWidth="109.0" text="Import File" />
-      <Button layoutX="314.0" layoutY="446.0" mnemonicParsing="false" onAction="#loadList" prefHeight="25.0" prefWidth="106.0" text="RefreshList" />
+      <Button layoutX="314.0" layoutY="446.0" mnemonicParsing="false" onAction="#refresh" prefHeight="25.0" prefWidth="106.0" text="RefreshList" />
       <ListView fx:id="carList" layoutX="21.0" layoutY="92.0" prefHeight="313.0" prefWidth="552.0" />
       <Button fx:id="addCar" layoutX="658.0" layoutY="268.0" mnemonicParsing="false" onAction="#addCar" text="Save to Inventory" />
       <TextField fx:id="addCarDID" layoutX="638.0" layoutY="102.0" />
