--- a/src/main/resources/view/dealership_software/mainMenuGUI.fxml
+++ b/src/main/resources/view/dealership_software/mainMenuGUI.fxml
@@ -18,9 +18,9 @@
       <Button layoutX="106.0" layoutY="446.0" mnemonicParsing="false" onAction="#readJson" prefHeight="25.0" prefWidth="109.0" text="Import File" />
       <Button layoutX="314.0" layoutY="446.0" mnemonicParsing="false" onAction="#refresh" prefHeight="25.0" prefWidth="106.0" text="RefreshList" />
       <ListView fx:id="carList" layoutX="21.0" layoutY="92.0" prefHeight="313.0" prefWidth="552.0" />
-      <Button fx:id="addCar" layoutX="658.0" layoutY="268.0" mnemonicParsing="false" onAction="#addCar" text="Save to Inventory" />
+      <Button fx:id="addCar" layoutX="655.0" layoutY="297.0" mnemonicParsing="false" onAction="#addCar" text="Save to Inventory" />
       <TextField fx:id="addCarDID" layoutX="638.0" layoutY="102.0" />
-      <Label layoutX="579.0" layoutY="106.0" text="Dealer ID : " />
+      <Label layoutX="569.0" layoutY="106.0" text="Dealer ID : " />
       <Label layoutX="589.0" layoutY="130.0" text="Car ID :" />
       <TextField fx:id="addCarID" layoutX="638.0" layoutY="126.0" />
       <TextField fx:id="addCarPrice" layoutX="638.0" layoutY="151.0" />
@@ -44,5 +44,7 @@
       <Label fx:id="success" layoutX="693.0" layoutY="301.0" text="Success" textFill="GREEN" visible="false" />
       <ChoiceBox fx:id="addCarTypeChoiceBox" layoutX="638.0" layoutY="177.0" prefWidth="150.0" />
       <Button fx:id="resetButton" layoutX="573.0" layoutY="445.0" mnemonicParsing="false" onAction="#resetTextBoxAndErrors" prefHeight="26.0" prefWidth="130.0" text="Reset Errors/TextBox" />
+      <Label layoutX="573.0" layoutY="257.0" text="Currency:" />
+      <ChoiceBox fx:id="currencyChoiceBox" layoutX="638.0" layoutY="253.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
